added kafka