@@ -1,5 +1,6 @@
 package com.flowable.flowable.serviceImpl;
 
+import com.flowable.flowable.config.kafka.dto.TMSUpdatePayload;
 import com.flowable.flowable.dto.TaskDTO;
 import com.flowable.flowable.models.ESSWorkFlow;
 import com.flowable.flowable.models.TMSWorkFlow;
@@ -12,6 +13,8 @@ import org.flowable.task.api.Task;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
+import org.springframework.kafka.annotation.KafkaListener;
+import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
@@ -33,12 +36,15 @@ public class LeaveRequestServiceImpl {
 
     private final ESSWorkFlowRepo essWorkFlowRepo;
 
+    private final KafkaTemplate<String, TMSUpdatePayload> kafkaTemplate;
+
     @Autowired
-    public LeaveRequestServiceImpl(RuntimeService runtimeService, TaskService taskService, TMSWorkFlowRepo tmsWorkFlowRepo, ESSWorkFlowRepo essWorkFlowRepo) {
+    public LeaveRequestServiceImpl(RuntimeService runtimeService, TaskService taskService, TMSWorkFlowRepo tmsWorkFlowRepo, ESSWorkFlowRepo essWorkFlowRepo, KafkaTemplate<String, TMSUpdatePayload> kafkaTemplate) {
         this.runtimeService = runtimeService;
         this.taskService = taskService;
         this.tmsWorkFlowRepo = tmsWorkFlowRepo;
         this.essWorkFlowRepo = essWorkFlowRepo;
+        this.kafkaTemplate = kafkaTemplate;
     }
 
     /**
@@ -48,9 +54,23 @@ public class LeaveRequestServiceImpl {
      * @return returns ResponseEntity containing the tasks response.
      * @Date 22/06/2025
      */
-    public void startLeaveProcess(Map<String, Object> vars) {
+    @KafkaListener(topics = "tms-start-update", containerFactory = "KafkaListenerContainerFactory", groupId = "tms-group")
+    public void startLeaveProcess(TMSUpdatePayload tmsUpdatePayload) {
 
-        if (vars.get("applicationType").equals("TMS")){
+        Map<String, Object> variables = processVariables(tmsUpdatePayload);
+
+        /** check if task is active given the leave id */
+
+        Task task = taskService.createTaskQuery()
+                .processVariableValueEquals(tmsUpdatePayload.getLeaveId())
+                .singleResult();
+        if (task != null){
+            throw new ResponseStatusException(HttpStatusCode.valueOf(400),"An active task alredy in use with the given id:->>>>{}");
+        }
+
+        /** check application type */
+
+        if (tmsUpdatePayload.getApplicationType().equalsIgnoreCase("TMS")){
 
             log.info("About to start approval workflow for TMS:->>>>");
 
@@ -59,13 +79,16 @@ public class LeaveRequestServiceImpl {
             List<String> sortedWorkflows = workFlows.stream()
                     .sorted(Comparator.comparing(TMSWorkFlow::getPriority))
                     .map(TMSWorkFlow::getName)
-                    .toList();
+                    .collect(Collectors.toList()); // mutable list
 
-            vars.put("approverList", sortedWorkflows);
-            vars.put("rejected", false);
-            vars.put("approveleaverequest", null);
+            if (!sortedWorkflows.isEmpty()) {
+                sortedWorkflows.remove(sortedWorkflows.size() - 1);
+            }
 
-        } else if (vars.get("applicationType").equals("ESS")) {
+            variables.put("approverList", sortedWorkflows);
+
+
+        } else if (variables.get("applicationType").equals("ESS")) {
 
             log.info("About to start approval workflow for ESS:->>>>");
 
@@ -76,12 +99,12 @@ public class LeaveRequestServiceImpl {
                     .map(ESSWorkFlow::getName)
                     .toList();
 
-            vars.put("approverList", sortedWorkflows);
-            vars.put("rejected", false);
-            vars.put("approveleaverequest", null);
+            variables.put("approverList", sortedWorkflows);
         }
 
-        runtimeService.startProcessInstanceByKey("leaveProcess", vars);
+        runtimeService.startProcessInstanceByKey("leaveProcess", variables);
+
+        kafkaTemplate.send("tms-update", tmsUpdatePayload);
     }
 
     /**
@@ -126,20 +149,25 @@ public class LeaveRequestServiceImpl {
     }
 
     /**
-     * @description this method is used to complete a task by a user given the task id and some metadata thus the variable.
+     * @description this method is used to complete a task by a user given the task id and some metadata thus the variables.
      * @Auther Emmanuel Yidana
-     * @param variables
+     * @param tmsUpdatePayload
      * @return returns ResponseEntity containing the tasks response.
      * @Date 22/06/2025
      */
-    public void completeTask(Map<String, Object> variables) {
+    @KafkaListener(topics = "tms-update", containerFactory="KafkaListenerContainerFactory", groupId = "tms-group")
+    public void completeTask(TMSUpdatePayload tmsUpdatePayload) {
+
+        Map<String, Object> variables = new HashMap<>();
+        variables.put("leaveId", tmsUpdatePayload.getLeaveId());
+        variables.put("approveleaverequest", tmsUpdatePayload.getApproveleaverequest());
 
         log.info("About to complete task for {}", variables.get("leaveId"));
 
         /** retrieve a task given the leaveId **/
 
         Task task = taskService.createTaskQuery()
-                .processVariableValueEquals("leaveId", variables.get("leaveId"))
+                .processVariableValueEquals(tmsUpdatePayload.getLeaveId())
                 .singleResult();
 
       if (task != null){
@@ -148,7 +176,48 @@ public class LeaveRequestServiceImpl {
               if (variables.isEmpty()){
                   throw new ResponseStatusException(HttpStatusCode.valueOf(400), "variables cannot be null for task approval");
               }
+
+
+             if (tmsUpdatePayload.getApproveleaverequest().equalsIgnoreCase("Yes")){
+
+                 List<TMSWorkFlow> workFlows = tmsWorkFlowRepo.findAll();
+
+                 List<String> sortedWorkflows = workFlows.stream()
+                         .sorted(Comparator.comparing(TMSWorkFlow::getPriority))
+                         .map(TMSWorkFlow::getName)
+                         .toList();
+
+                 String updatedStatus = "";
+                 for (int i=0; i<sortedWorkflows.size(); i++){
+                     if (sortedWorkflows.get(i).equalsIgnoreCase(task.getAssignee()) ){
+                         updatedStatus = sortedWorkflows.get(i+1);
+                     }
+                 }
+
+                 log.info("Updated status:->>>>{}", updatedStatus);
+
+                 TMSUpdatePayload tmsUpdatePayloadBuilder = TMSUpdatePayload
+                         .builder()
+                         .status("PENDING_"+updatedStatus.toUpperCase()+"_APPROVAL")
+                         .leaveId(tmsUpdatePayload.getLeaveId())
+                         .build();
+
+                 kafkaTemplate.send("flowable-update", tmsUpdatePayloadBuilder);
+
+             } else if (tmsUpdatePayload.getApproveleaverequest().equalsIgnoreCase("No")) {
+
+                 TMSUpdatePayload tmsUpdatePayloadBuilder = TMSUpdatePayload
+                         .builder()
+                         .status("REJECTED")
+                         .leaveId(tmsUpdatePayload.getLeaveId())
+                         .build();
+
+                 kafkaTemplate.send("flowable-update", tmsUpdatePayloadBuilder);
+
+             }
+
               taskService.complete(task.getId(), variables);
+
           }else {
               log.info("In submit leave request:->>>>>");
               taskService.complete(task.getId());
@@ -157,5 +226,26 @@ public class LeaveRequestServiceImpl {
           throw new ResponseStatusException(HttpStatusCode.valueOf(404), "task cannot be found");
       }
 
+    }
+
+
+    /**
+     * @description this method is used to build the process variables objects
+     * @Auther Emmanuel Yidana
+     * @param tmsUpdatePayload
+     * @return returns ResponseEntity containing the tasks response.
+     * @Date 22/06/2025
+     */
+    private Map<String, Object> processVariables(TMSUpdatePayload tmsUpdatePayload){
+        Map<String, Object> variables = new HashMap<>();
+        variables.put("rejected", false);
+        variables.put("leaveId", tmsUpdatePayload.getLeaveId());
+        variables.put("requestedBy", tmsUpdatePayload.getRequestedBy());
+        variables.put("status", tmsUpdatePayload.getStatus());
+        variables.put("approveleaverequest", null);
+        variables.put("applicationType", tmsUpdatePayload.getApplicationType());
+        variables.put("requestType", tmsUpdatePayload.getRequestType());
+
+        return variables;
     }
 }
